[package]
name = "whenever"
description = "Whenever Automation Tool"
readme = "README.md"
license = "LGPL-2.1-or-later"
version = "1.3.3"
authors = ["Francesco Garosi <francesco.garosi@gmail.com>"]
repository = "https://github.com/almostearthling/whenever/"
edition = "2024"


[dependencies]
async-std = "1.12"
async-trait = "0.1"
bstr = "1.12"
cfgmap = { version = "0.4", features = ["from_toml"] }
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
clokwerk = "0.4"
ctrlc = { version = "3.5", features = ["termination"] }
flexi_logger = "0.31"
futures = "0.3"
itertools = "0.15"
lazy_static = "1.5"
listenfd = "1.0"
log = "0.4"
minreq = { version = "3.0", features = ["https-native-tls"], optional = true }
nu-ansi-term = "0.50"
notify = "8.1"
parking_lot = "0.12"
rand = "0.10"
regex = "1.7"
serde = "1.0"
serde_json = "1.0"
single-instance = "0.3"
subprocess = "1.1"
system-idle-time = "1.0"
time = "0.3"
toml = "1.0"
unique_id = "0.1"
whoami = "2.1"
zbus = { version = "5.17", optional = true }

# the "lua54" feature can be modified to use a different Lua version
mlua = { version = "0.12", features = ["lua54", "vendored"] }

[target.'cfg(windows)'.dependencies]
wmi = { version = "0.18", optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"


# a brief explanation of the available features:
#
# 1. "dbus": enables DBus support, available on both Linux and Windows, but
#    almost useless on Windows
# 2. "wmi": enable WMI support, only available on Windows (ignored on Linux)
# 3. "lua_sync": synchronization features for Lua scripts (see docs)
# 4. "lua_httpreq": simple HTTP(S) requests for Lua scripts (see docs)
# 5. "lua_unsafe": compiles the unsafe Lua interpreter, which is able to load
#    Lua C (binary) modules, is supported on both Linux and Windows, but it
#    is still experimental
#
# the suggested configuration can be built using:
#
# - cargo build --release --features linux_std      (Linux)
# - cargo build --release --features windows_std    (Windows)
#
# as the default configuration does not include any option.

[features]
default = []
# default = ["check_std"]
dbus = ["dep:zbus"]
wmi = ["dep:wmi"]
lua_sync = []
lua_unsafe = []
lua_httpreq = ["dep:minreq"]
windows_std = ["wmi", "lua_sync", "lua_httpreq"]
linux_std = ["dbus", "lua_sync", "lua_httpreq"]
check_std = ["wmi", "dbus", "lua_sync", "lua_httpreq"]


# make the executable memory footprint as small as possible for release
[profile.release]
strip = true    # strip executable
opt-level = "z" # optimize for size
lto = true
panic = 'abort' # remove garbage strings from executable


# end
